<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:gravity="center|center_horizontal"
        android:background="@color/Black"
        android:textColor="@color/GreenYellow"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/text"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:background="@color/Yellow"
            android:inputType="text"
            android:autofillHints=""
            />

        <EditText
            android:id="@+id/text2"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:textSize="30sp"
            android:background="@color/Yellow"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints=""
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/university_1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@color/HotPink"
            android:textColor="@color/Black"
            />

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="60dp"
            android:textSize="30sp"
            android:background="@color/Blue"
            android:text="@string/university_2"
            android:textColor="@color/White"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/university_3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@color/GreenYellow"
            android:textColor="@color/Black"
            />

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:textSize="30sp"
            android:background="@color/Red"
            android:text="@string/university_4"
            android:textColor="@color/White"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>